manifest-monitoring/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: monitoring
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'sleep 3600']  # Keeps the pod running for 1 hour
    tty: true
